update dendro html

--- a/dendrogram.html
+++ b/dendrogram.html
@@ -14,7 +14,10 @@ Title: Federal Accounts
     <div id="button_holder">
       <input type="button" name="xAxis" class="button" value="Reset Tree">
     </div>
-    <div id="tree-container"></div>
+    <div id="tree-container">
+        <button id="zoom_in">+</button>
+        <button id="zoom_out">-</button>
+    </div>
 </div>
 
 <!-- d3 -->
